--- a/settings.yml
+++ b/settings.yml
@@ -1,3 +1,7 @@
+right_sidebar_blocks_enabled:
+  type: bool
+  default: false
+  description: "Enabling this will add Right Sidebar Blocks theme component support and replace the original fkb panel with it."
 custom_sidebar_enabled:
   type: bool
   default: false
