--- a/settings.yml
+++ b/settings.yml
@@ -20,7 +20,7 @@ topic_image_backdrop_brightness:
   default: "0.65"
   description: "Change the topic_image_backdrop brightness size. Set a lower value for less bright backdrop image."
 
-categor_badge_style:
+category_badge_style:
   default: bullet
   type: enum
   choices:
