Add disable topic list modification setting

--- a/settings.yml
+++ b/settings.yml
@@ -1,3 +1,7 @@
+disable_topic_list_modification:
+  type: bool
+  default: false
+  description: "Enable this setting to revert topic list to default Discourse version. It's useful if you want to use theme components like: Topic List Thumbnails..."
 topic_image_height: 
   default: "300px"
   description: "Change the topic list image (thumbnail) section height."
